--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -14,7 +14,7 @@
   <meta property="og:image" content="/assets/og-image.png">
   
   <title>TubNew - Baixador de Vídeos do YouTube e Reels</title>
-  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+  <link rel="icon" type="image/png" href="/assets/favicon.png">
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
